Catita Sobrancelhas :tada:

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <div class="container grid">
           <div class="image">
             <img
-              src="https://images.unsplash.com/photo-1559599101-f09722fb4948?ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8aGFpcmRyZXNzZXJ8ZW58MHx8MHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60"
+              src="./assets/img/catitasobrancelhas01.jpg"
               alt="3 Mulheres Sorrindo"
             />
           </div>
